<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>local.codenode</groupId>
  <artifactId>codenode-desktop</artifactId>
  <version>0.1.5</version>
  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>5.10.2</junit.version>
  </properties>
  <dependencies>
    <dependency><groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter</artifactId><version>${junit.version}</version><scope>test</scope></dependency>
  </dependencies>
  <build>
    <finalName>codenode-desktop</finalName>
    <plugins>
      <plugin><artifactId>maven-surefire-plugin</artifactId><version>3.2.5</version></plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId><version>3.4.2</version>
        <configuration><archive><manifest><mainClass>local.codenode.CodeNodeApp</mainClass></manifest></archive></configuration>
      </plugin>
    </plugins>
  </build>
</project>
